--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 3001"
+    "start": "json-server --host 172.31.34.233 --port 3001 db.json"
   },
   "author": "",
   "license": "ISC",
